assets/css/board.css
.selectable {
  cursor: hand;
  cursor: pointer;
  -webkit-animation: selectable 1700ms ease-in-out infinite;
}
.selectable:hover {
  outline: 1px solid white;
  box-shadow: none;
}
@-webkit-keyframes selectable {
  0%, 100% {
    box-shadow: 0px 0px 12px 4px rgb(0, 225, 225);
  }

  50% {
    box-shadow: 0px 0px 1px 1px rgb(0, 100, 100);
  }
}

* {
  font-family: Arial;
}

a {
  color: #5555CC
}

div  {
  padding: 0px;
  margin: 0px;
}

body {
  background: #111;
  color: white;
}

#waiting {
  float: left;
  width: 600px;
  height: 600px;
  padding: 20px;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
  color: #EEE;
}

#table_area {
  position: relative;
  min-width: 1280px;
  width: 1280px;
  min-height: 800px;
  height: 800px;
}
.building_area {
  background: top left no-repeat url("../images/background_building.jpg");
  background-size: 100%;
}
.playing_area {
  background: top left no-repeat url("../images/background_playing.jpg");
  background-size: 100%;
}

#dashboard {
  position: absolute;
  z-index: 10002px;
  left: 210px;
  top: 736px;
  width: 316px;
  height: 44px;
  border-radius: 15px;
}
.dashboard_section {
  width: 315px;
  height: 44px;
  color: rgb(26, 47, 36);
  text-align: center;
  font-size: 22px;
  font-weight: bold;
}
img.vertical-aligner {
  vertical-align: middle;
  height: 100%;
  width: 1px;
}

#side_area {
  position: relative;
  left: 695px;
  top: 0px;
  height: 800px;
  width: 585px;
}

.side_selector {
  display: none;
  position: relative;
  height: 545px;
  top: 40px;
}

#chat {
  position: absolute;
  top: 589px;
  left: 69px;
  width: 495px;
  height: 167px;
}
#chat_messages {
  height: 137px;
  overflow-y: scroll;
  overflow-x: hidden;
  padding: 3px 2px;
  border-bottom: 1px solid white;
  font-size: 14px;
  font-weight: initial;
  color: white;
}
#chat_input {
  color: white;
  background: rgba(0, 0, 0, 0);
  height: 25px;
  width: 238px;
  border-style: none;
  outline: none;
  text-align: left;
  font-size: 16px;
  font-weight: initial;
}

#opponent_status {
  background-color: #005;
}

#settings_overlay {
  position: absolute;
  right: 1px;
  top: 5px;
  width: 27px;
  border: 2px solid #333333;
	background-color: rgb(51, 51, 51);
	background-color: rgba(151, 151, 151, 0.5);
  border-radius: 10px;
}

.setting_button {
  padding: 1px;
  position: relative;
  height: 25px;
  width: 25px;
  background-size: 25px 25px;
  z-index: 10000;
}

.setting_button:hover {
  padding: 0px;
  border: 1px solid #00FFFF;
  border-radius: 10px;
  -moz-border-radius: 10px;
}

.volume_control_on {
  background: center center no-repeat url('../images/sound_on.svg');
  background-size: 25px 25px;
}
.volume_control_off {
  background: center center no-repeat url('../images/sound_off.svg');
  background-size: 25px 25px;
}

.close_button {
  position: absolute;
  top: 0px;
  right: 0px;
  border-width: 2px 3px;
  /* border: solid #d3d3d3; */
  border: solid #EEE;
  border-radius: 4px;
  width: 20px;
  height: 19px;
  background: #EEE top left no-repeat url('../images/close.svg');
  background-size: 100%;
}

.hr {
  border-bottom: 3px solid #FFF;
  width: 100%;
  margin: 3px 0px;
}

#settings {
  background: center center no-repeat url('../images/settings.gif');
  background-size: 25px 25px;
}

.dialog_content_wrapper {
  position: relative;
  width: 100%;
}
.dialog_content {
  position: relative;
}
#forfeit_content {
  position: absolute;
  top: 0px;
  left: 0px;
  visibility: hidden;
  width: 100%;
}
.dialog .title {
  margin-left: 40px;
  font-size: 34px;
  font-family: Impact, Arial;
  text-shadow: 3px 3px 8px #000, -3px -3px 8px #000;
}
.dialog {
  position: absolute;
  visibility: hidden;
  z-index: 20000;
  left: 292px; /* playing_area/2 - width/2 - padding-left/2 */
  top: 56px; /* board height/2 - height/2 - padding-top/2*/
  /*
   * image: 573x476
   * content area: 297x343
   * area for side padding: 230px;
   * area for top/bottom padding: 253;
   */
  padding-top: 78px;
  padding-bottom: 73px;
  padding-left: 115px;
  padding-right: 145px;
  width: 313;
  min-width: 313;
  height: 325;
  box-shadow: 3px 3px 9px #000, -3px -3px 9px #000;
  background: top left no-repeat url('../images/settings_background.png');
  background-size: 100%;
}
.dialog:focus {
  outline: none;
}
.dialog *:focus {
  outline: none;
}

ul li.separator {
  min-height:30px;
  cursor: auto !important;
}
.dialog p {
  margin-left: 10px;
}
.dialog ul {
  list-style-type: none;
}
.dialog li,.close_button {
  cursor: hand;
  cursor: pointer;
}
.dialog li,a {
  color: #FFF;
  font-size: 22px;
  text-shadow: 3px 3px 8px #000, -3px -3px 8px #000;
}
.dialog .disabled {
  cursor: auto !important;
  color: #777777;
}
.dialog a {
  text-decoration: none;
}

#message {
  width: 200px;
  left: 290px;
  padding: 4px 6px;
  text-align: left;
  font-size: 16px;
  font-weight: initial;
}

.board {
  position: relative;
  top: 64px;
  left: 54px;
  float: left;

  width: 588px;
  height: 588px;
  padding: 18px;
  z-index: 100;
}
.board_overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
}

.selected {
  -webkit-animation: myanim 1s ease-in-out infinite; /* Saf5, Chrome */
     -moz-animation: myanim 1s ease-in-out infinite; /* FF5+ */
       -o-animation: myanim 1s ease-in-out infinite; /* Opera 12+ */
          animation: myanim 1s ease-in-out infinite; /* Saf5, Chrome */
}

@-webkit-keyframes myanim {
  0%, 100% { -webkit-transform: scale3d(1, 1, 1); zoom: 1; }
  50%      { -webkit-transform: scale3d(1.2, 1.2, 1); zoom: 1; }
}
@-moz-keyframes myanim {
  0%, 100% { -moz-transform: scale3d(1, 1, 1); zoom: 1; }
  50%      { -moz-transform: scale3d(1.2, 1.2, 1); zoom: 1; }
}
@-o-keyframes myanim {
  0%, 100% { -o-transform: scale3d(1, 1, 1); zoom: 1; }
  50%      { -o-transform: scale3d(1.2, 1.2, 1); zoom: 1; }
}
@keyframes myanim {
  0%, 100% { transform: scale3d(1, 1, 1); zoom: 1; }
  50%      { transform: scale3d(1.2, 1.2, 1); zoom: 1; }
}

